<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            app:title="@string/settings_electricity_title">
        <EditTextPreference
                app:key="promptCharge"
                app:title="@string/settings_prompt_charge_title"
                app:defaultValue="100"
                app:useSimpleSummaryProvider="true"
                />
    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/settings_about_title">
        <Preference
                app:key="about"
                app:title="Webb">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://webb-l.top"/>
        </Preference>
        <Preference
                app:key="projectUrl"
                app:title="@string/settings_projectUrl_title"
                app:summary="https://github.com/Webb-L/ElectricityPrompt">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/Webb-L/ElectricityPrompt"/>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>