<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

    <ScrollView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                            android:layout_width="180dp"
                            android:layout_height="200dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:cardCornerRadius="10dp">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:gravity="center_vertical">

                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="16dp"
                                    android:text="@string/main_capacity_title"/>
                        </LinearLayout>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom"
                                android:padding="16dp"
                                android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="64dp"
                                    android:layout_height="64dp"
                                    android:src="@drawable/ic_battery"/>

                            <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                <TextView
                                        android:id="@+id/capacity"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="30sp"
                                        android:textColor="#000"
                                        android:text=""/>

                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/mah"/>
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                            android:id="@+id/cv_current_battery"
                            android:layout_width="150dp"
                            android:layout_height="110dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="16dp"
                            app:cardCornerRadius="10dp">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical">

                            <TextView
                                    android:id="@+id/tv_currentBatteryTitle"
                                    android:layout_margin="16dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/PowerConnectionReceiver_CurrentBattery"/>
                        </LinearLayout>

                        <TextView
                                android:id="@+id/batteryPct"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="30sp"
                                android:textColor="#000"
                                android:layout_marginTop="16dp"
                                android:text=""/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                            android:layout_width="150dp"
                            android:layout_height="74dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="16dp"
                            app:cardCornerRadius="10dp">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <TextView
                                    android:layout_margin="16dp"
                                    android:textSize="13sp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/main_status_title"/>
                        </LinearLayout>

                        <TextView
                                android:id="@+id/status_description"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:layout_marginTop="10dp"
                                android:textColor="#000"/>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                    app:cardCornerRadius="10dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            tools:ignore="UselessParent">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/main_charging_situation"/>

                        <TextView
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:textSize="10sp"
                                android:layout_height="wrap_content"
                                android:text="@string/main_chart_update"
                                tools:ignore="SmallSp"/>
                    </LinearLayout>
                </LinearLayout>

                <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/chart"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="32dp"
                        />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="34dp"
                        android:layout_marginStart="3dp"
                        android:textColor="@android:color/black"
                        android:text="%/m"
                        tools:ignore="SmallSp"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>